--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "ets/document-storage",
-    "description": "Provides implementations for various document storage services",
-    "keywords": ["aws", "s3", "cloud", "echosign"],
+    "description": "Provides implementations to interact with various document storage services",
+    "keywords": ["aws", "s3", "cloud", "document-storage", "echosign"],
     "homepage": "https://github.com/ETSGlobal/ETSDocumentStorage",
     "license": "Apache-2.0",
     "authors": [
@@ -16,7 +16,7 @@
     "require": {
         "php": ">=5.4.0",
         "aws/aws-sdk-php" : "~2.6",
-        "ets/echosign-bundle": "dev-master"
+        "ets/echosign-bundle": "~0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
