--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,18 @@
 language: php
 
 php:
-  - "5.3"
-  - "5.4"
-  - "5.5"
+  - 5.3
+  - 5.4
+  - 5.5
+  - 5.6
 
 before_script:
-    - curl -s http://getcomposer.org/installer | php
-    - php composer.phar install --dev
+    - composer self-update
+    - composer install --no-interaction --prefer-source --dev
 
-script: phpunit
+script: vendor/bin/phpunit
+
+matrix:
+  allow_failures:
+    - php: 5.6
+  fast_finish: true
