--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ php:
   - 5.6
 
 before_script:
-    - composer self-update
-    - composer install --no-interaction --prefer-source --dev
+    - curl -s http://getcomposer.org/installer | php
+    - php composer.phar install --dev --no-interaction --prefer-dist
 
-script: vendor/bin/phpunit
+script: ./vendor/bin/phpunit -c tests/phpunit.xml.dist
 
 matrix:
   allow_failures:
