--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,18 @@
-language: php
-
 php:
   - 5.4
   - 5.5
   - 5.6
 
-before_script:
-    - curl -s http://getcomposer.org/installer | php
-    - php composer.phar install --dev --no-interaction --prefer-dist
+before_install:
+    - composer self-update
 
-script: ./vendor/bin/phpunit -c tests/phpunit.xml.dist
+before_script:
+    - composer install --dev --no-interaction --prefer-dist
+
+script:
+    - ./vendor/bin/phpunit -c tests/phpunit.xml.dist
 
 matrix:
-  allow_failures:
-    - php: 5.6
-  fast_finish: true
+    allow_failures:
+        - php: 5.6
+    fast_finish: true
