made phpspec and phpunit part of the same command to share exit status

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ install:
     - composer install --dev --no-interaction --prefer-dist
 
 script:
-    - bin/phpspec run
-    - bin/phpunit -c tests/phpunit.xml
+    - bin/phpspec run && bin/phpunit -c tests/phpunit.xml
 
 matrix:
     allow_failures:
