--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
     - composer install --dev --no-interaction --prefer-dist
 
 script:
-    - bin/phpspec run && bin/phpunit -c tests/phpunit.xml
+    - bin/phpspec run && bin/phpunit
 
 matrix:
     allow_failures:
