--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,22 @@
 language: php
 
 php:
-  - 5.4
-  - 5.5
-  - 5.6
+    - 5.3
+    - 5.4
+    - 5.5
+    - 5.6
+
+matrix:
+    include:
+        - php: 5.3.3
+          env: COMPOSER_FLAGS="--prefer-lowest"
 
 before_install:
     - composer self-update
 
 install:
-    - composer install --dev --no-interaction --prefer-dist
+    - composer update $COMPOSER_FLAGS
 
 script:
-    - bin/phpspec run && bin/phpunit
+    - echo '[phpspec] Running'; ./vendor/bin/phpspec run
+    - echo '[phpunit] Running'; ./vendor/bin/phpunit
