--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "ets/document-storage",
+    "type": "library",
     "description": "Provides implementations to interact with various document storage services",
     "keywords": ["aws", "s3", "cloud", "document-storage", "echosign"],
     "homepage": "https://github.com/ETSGlobal/document-storage",
@@ -11,13 +12,14 @@
         }
     ],
     "autoload": {
-        "psr-4": { "ETS\\DocumentStorage\\": "src/" }
+        "psr-4": {
+            "ETS\\DocumentStorage\\": "src/"
+        }
     },
     "autoload-dev": {
-        "psr-4": { "ETS\\DocumentStorage\\Tests\\": "tests/" }
-    },
-    "config": {
-        "bin-dir": "bin"
+        "psr-4": {
+            "tests\\ETS\\DocumentStorage\\": "tests/"
+        }
     },
     "require": {
         "php": ">=5.3.3",
@@ -25,7 +27,7 @@
         "ets/echosign-bundle": "~0.2"
     },
     "require-dev": {
-        "phpspec/phpspec": "~2.0",
-        "phpunit/phpunit": "~4.0"
+        "phpspec/phpspec": "~2.1",
+        "phpunit/phpunit": ">=3.7,<5.0"
     }
 }
