--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,16 @@ php:
     - 5.5
     - 5.6
 
+env:
+  matrix:
+    - PREFER_LOWEST="--prefer-lowest"
+    - PREFER_LOWEST=""
+
 before_install:
     - composer self-update
-    - composer install -n
 
 install:
-    - composer update --prefer-lowest --prefer-stable -n
+    - composer update --prefer-source $PREFER_LOWEST
 
 script:
     - echo '[phpspec] Running'; ./vendor/bin/phpspec run
