--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,11 @@
 [*]
 charset = utf-8
 end_of_line = lf
+indent_size = 4
+indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.php]
-indent_size = 4
-indent_style = space
+[Makefile]
+indent_style = tab
+indent_size = 8
