--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,20 @@
 language: php
 
+# This triggers builds to run on the new TravisCI infrastructure.
+# See: http://docs.travis-ci.com/user/workers/container-based-infrastructure/
 sudo: false
 
 php:
     - '7.0'
 
-before_install:
-    - composer self-update
+matrix:
+    include:
+        - php: 7.0
+        env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
 
-install:
-    - composer update --prefer-lowest --prefer-stable --prefer-dist --no-interaction
+before_script:
+    - travis_retry composer self-update
+    - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source
 
 script:
     - make tests
