--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,6 +1,11 @@
+checks:
+    php:
+        code_rating: true
+        duplication: true
+
 filter:
-    paths: [src/*, tests/*]
-    excluded_paths: [spec/*, vendor/*]
+    paths: [src/*]
+    excluded_paths: [vendor/*]
 
 tools:
     php_code_sniffer: true
