--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,11 @@
     "homepage": "https://github.com/baruica/document-storage",
     "license": "Apache-2.0",
     "autoload": {
-        "psr-4": { "DocumentStorage\\": "src" },
-        "exclude-from-classmap": [ "tests" ]
+        "psr-4": { "DocumentStorage\\": "src/DocumentStorage" },
+        "exclude-from-classmap": [ "spec" ]
     },
     "autoload-dev": {
-        "psr-4": { "tests\\DocumentStorage\\": "tests" }
+        "psr-4": { "DocumentStorage\\": "spec/DocumentStorage" }
     },
     "require": {
         "php": "^7.0"
